[package]
name = "to-html"
version = "0.2.1"
authors = ["Ludwig Stecher <ludwig.stecher@gmx.de>"]
description = "Render a terminal with ANSI colors as HTML"
categories = ["command-line-utilities"]
repository = "https://github.com/Aloso/to-html"
documentation = "https://docs.rs/to-html"
homepage = "https://github.com/Aloso/to-html"
readme = "README.md"
edition = "2018"
license = "MIT"
keywords = ["color", "cli", "terminal", "html"]
exclude = ["docs"]

[workspace]
members = ["crates/*"]

[dependencies]
ansi-to-html = { path = "./crates/ansi-to-html" }
anyhow = "1"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
